# pyracer-srv

./: .gitignore  .pre-commit-config.yml  Makefile  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: main.yml
.service/: install.sh  pyracer-srv.service
app/: main.py
app/routers/: home.py  leds.py
app/schemas/: leds.py
templates/: index.html
tests/: conftest.py
